<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_input_options">Input options</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_appearance">Appearance &amp; layouts</string>
    <string name="settings_screen_multilingual">Multilingual options</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="enable_metrics_logging">"Improve <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_disabled_summary">No voice input methods enabled. Check Language &amp; input settings.</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Languages</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="select_language">Languages</string>
    <string name="hint_add_to_dictionary">Touch again to save</string>
    <string name="hint_add_to_dictionary_without_word">Touch here to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="subtype_zh_CN">Chinese (CN)</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="subtype_no_language">No language (Alphabet)</string>
    <string name="subtype_no_language_qwerty">Alphabet (QWERTY)</string>
    <string name="subtype_no_language_qwertz">Alphabet (QWERTZ)</string>
    <string name="subtype_no_language_azerty">Alphabet (AZERTY)</string>
    <string name="subtype_no_language_dvorak">Alphabet (Dvorak)</string>
    <string name="subtype_no_language_colemak">Alphabet (Colemak)</string>
    <string name="subtype_no_language_pcqwerty">Alphabet (PC)</string>
    <string name="subtype_emoji">Emoji</string>
    <string name="keyboard_theme">Keyboard theme</string>
    <string name="keyboard_theme_holo_white" translatable="false">Holo White</string>
    <string name="keyboard_theme_holo_blue" translatable="false">Holo Blue</string>
    <string name="keyboard_theme_material_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_material_light" translatable="false">Material Light</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="custom_input_style_note_message">"Your custom input style needs to be enabled before you start using it. Do you want to enable it now?"</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="custom_input_style_already_exists">"The same input style already exists: <xliff:g id="INPUT_STYLE_NAME" example="English (Dvorak)">%s</xliff:g>"</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="button_default">Default</string>
    <string name="setup_welcome_title">"Welcome to <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="setup_welcome_additional_description">with Gesture Typing</string>
    <string name="setup_start_action">Get started</string>
    <string name="setup_next_action">Next step</string>
    <string name="setup_steps_title">"Setting up <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="setup_step1_bullet" translatable="false">1</string>
    <string name="setup_step1_title">"Enable <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="setup_step1_instruction">"Please check \"<xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>\" in your Language &amp; input settings. This will authorize it to run on your device."</string>
    <string name="setup_step1_finished_instruction">"<xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g> is already enabled in your Language &amp; input settings, so this step is done. On to the next one!"</string>
    <string name="setup_step1_action">Enable in Settings</string>
    <string name="setup_step2_bullet" translatable="false">2</string>
    <string name="setup_step2_title">"Switch to <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="setup_step2_instruction">"Next, select \"<xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>\" as your active text-input method."</string>
    <string name="setup_step2_action">Switch input methods</string>
    <string name="setup_step3_bullet" translatable="false">3</string>
    <string name="setup_step3_title">"Congratulations, you're all set!"</string>
    <string name="setup_step3_instruction">Now you can type in all your favorite apps with <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>.</string>
    <string name="setup_step3_action">Configure additional languages</string>
    <string name="setup_finish_action">Finished</string>
    <string name="show_setup_wizard_icon">Show app icon</string>
    <string name="show_setup_wizard_icon_summary">Display application icon in the launcher</string>
    <string name="app_name">Dictionary Provider</string>
    <string name="dictionary_provider_name">Dictionary Provider</string>
    <string name="dictionary_service_name">Dictionary Service</string>
    <string name="download_description">Dictionary update information</string>
    <string name="dictionary_settings_title">Add-on dictionaries</string>
    <string name="dictionary_install_over_metered_network_prompt">Dictionary available</string>
    <string name="dictionary_settings_summary">Settings for dictionaries</string>
    <string name="user_dictionaries">User dictionaries</string>
    <string name="default_user_dict_pref_name">User dictionary</string>
    <string name="dictionary_available">Dictionary available</string>
    <string name="dictionary_downloading">Currently downloading</string>
    <string name="dictionary_installed">Installed</string>
    <string name="dictionary_disabled">Installed, disabled</string>
    <string name="cannot_connect_to_dict_service">Problem connecting to dictionary service</string>
    <string name="no_dictionaries_available">No dictionaries available</string>
    <string name="check_for_updates_now">Refresh</string>
    <string name="last_update">Last updated</string>
    <string name="message_updating">Checking for updates</string>
    <string name="message_loading">Loading&#x2026;</string>
    <string name="main_dict_description">Main dictionary</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Settings</string>
    <string name="install_dict">Install</string>
    <string name="cancel_download_dict">Cancel</string>
    <string name="delete_dict">Delete</string>
    <string name="should_download_over_metered_prompt">The selected language on your mobile device has an available dictionary.&lt;br/>
We recommend &lt;b>downloading&lt;/b> the <xliff:g id="LANGUAGE_NAME" example="English">%1$s</xliff:g> dictionary to improve your typing experience.&lt;br/>
&lt;br/>
The download could take a minute or two over 3G. Charges may apply if you don\'t have an &lt;b>unlimited data plan&lt;/b>.&lt;br/>
If you are not sure which data plan you have, we recommend finding a Wi-Fi connection to start the download automatically.&lt;br/>
&lt;br/>
Tip: You can download and remove dictionaries by going to &lt;b>Language &amp; input&lt;/b> in the &lt;b>Settings&lt;/b> menu of your mobile device.</string>
    <string name="download_over_metered">Download now (<xliff:g id="SIZE_IN_MEGABYTES" example="0.7">%1$.1f</xliff:g>MB)</string>
</resources>