<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.github.crvv.wubinput"
    android:title="@string/settings_screen_preferences">


    <CheckBoxPreference
        android:key="vibrate_on"
        android:title="@string/vibrate_on_keypress"
        android:defaultValue="@bool/config_default_vibration_enabled"
        android:persistent="true" />
    <com.github.crvv.wubinput.wubi.settings.SeekBarDialogPreference
        android:key="pref_vibration_duration_settings"
        android:title="@string/prefs_keypress_vibration_duration_settings"
        app:maxValue="@integer/config_max_vibration_duration" />
    <CheckBoxPreference
        android:key="sound_on"
        android:title="@string/sound_on_keypress"
        android:defaultValue="@bool/config_default_sound_enabled"
        android:persistent="true" />
    <com.github.crvv.wubinput.wubi.settings.SeekBarDialogPreference
        android:key="pref_keypress_sound_volume"
        android:title="@string/prefs_keypress_sound_volume_settings"
        app:maxValue="100" /> <!-- percent -->

</PreferenceScreen>
